<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ModificationCompteActivity">

    <TextView
        android:id="@+id/modifCompteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/modifCompte"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/CompteTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/CompteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titreCompte"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/modifCompteTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_compte"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bord_bleu_fond_white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CompteTextView">
        <LinearLayout
            android:id="@+id/layout_compte_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15px">
            <TextView
                android:id="@+id/textViewNom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:paddingLeft="30px"
                android:text="@string/nom_" />
            <TextView
                android:id="@+id/textViewPrenom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="30px"
                android:textStyle="bold"
                android:text="@string/prenom_" />
            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="30px"
                android:text="@string/mail_" />
            <TextView
                android:id="@+id/textViewNumero"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="30px"
                android:textStyle="bold"
                android:text="@string/telephone_" />
            <TextView
                android:id="@+id/textViewTypeCompte"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="30px"
                android:textStyle="bold"
                android:text="@string/typeCompte_" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_compte_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15px">
            <EditText
                android:id="@+id/editNom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Toto" />
            <EditText
                android:id="@+id/editPrenom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Gaby" />
            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="gaby.toto@gmail.com" />
            <EditText
                android:id="@+id/editNumero"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="08392837" />
            <EditText
                android:id="@+id/editTypeCompte"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Candidat" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_boutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_compte">

        <Button
            android:id="@+id/boutton_modifier"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/boutton_valider"
            android:background="@drawable/arrondir_edit_bleu"
            android:textSize="15sp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>