<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".PostulerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_retour"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:background="@color/bleu_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Ajoutez des éléments à la barre d'outils ici -->

        <ImageButton
            android:id="@+id/bouton_retour"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/icon_retour_blanc"
            tools:ignore="MissingConstraints" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/postulerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/postuler"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/offreTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_retour"/>

    <TextView
        android:id="@+id/offreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titreOffre"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/postulerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_complement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_boutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offreTextView"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/ajoutTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:gravity="left"
            android:text="@string/ajoutCandidatOffre"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/descriptionOffreEditText"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:hint="..."
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/arrondir_edit_white"
            android:inputType="textLongMessage" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_boutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_complement">


        <Button
            android:id="@+id/boutton_envoyer"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/boutton_envoyer"
            android:background="@drawable/arrondir_edit_bleu"
            android:textSize="15sp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>